--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot[rate-limiter]==20.7
+python-telegram-bot[rate-limiter,callback-data]==20.7
 pyyaml>=6.0
 cryptography>=41.0
 apscheduler>=3.10
